--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <network-security-config>
     <domain-config cleartextTrafficPermitted="true">
+        //в продакшен
         <domain includeSubdomains="true">212.3.131.67</domain>
-        <domain includeSubdomains="true">192.168.0.10</domain>
-        <domain includeSubdomains="true">127.0.0.1</domain>
+        //тест с компа до сервака
+        <domain includeSubdomains="true">192.168.0.12</domain>
     </domain-config>
 </network-security-config> 
